--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
  <link rel="icon" href="favicon.ico">	
  
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/grid.css">				
+  <link rel="stylesheet" href="css/grid.css">	
+
+<link href='http://fonts.googleapis.com/css?family=Poiret+One' rel='stylesheet' type='text/css'>
+
+
   <link rel="stylesheet" href="css/styles.css">	
 	
 </head>
@@ -18,6 +22,14 @@
 		
 
 		<h1>Haute Corture</h1>
+
+		<img src="img/1.jpg">
+
+			<p>Haute couture (/ˌoʊt kuːˈtjʊər/; French pronunciation: ​[ot kuˈtyʁ]; French for "high sewing" or "high dressmaking" or "high fashion") refers to the creation of exclusive custom-fitted clothing. Haute couture is fashion that is constructed by hand from start to finish, made from high quality, expensive, often unusual fabric and sewn with extreme attention to detail and finished by the most experienced and capable seamstresses, often using time-consuming, hand-executed techniques. Couture translates literally from French as "dressmaking", but may also refer to fashion, sewing, or needlework[1] and is also used as a common abbreviation of haute couture and refers to the same thing in spirit.[2] Haute translates literally to "high". A haute couture garment is often made for a client, tailored specifically for the wearer’s measurements and body stance.[1] Considering the amount of time, money, and skill that is allotted to each completed piece, haute couture garments are also described as having no price tag - in other words, budget is not relevant.
+
+</p>
+
+
 
 
 		<!-- No Content After -->
